# HKN-Polito-Bot

./: .gitignore  Dockerfile  Procfile  Procfile.txt  README.md  about.txt  admins.txt  botdatamanager.py  common.py  db.py  en.json  event.py  events parse.py  events.json  events_parse.py  filters.py  fly.toml  hkn_bot.py  it.json  lang.py  newsletter.json  pyproject.toml  questions.txt  requirements.txt  savedquestions.txt  tutor.py  tutoring parse.py  tutoring.txt  userIDs.json  wordpress_fetch.py
assets/lang/: en.json  it.json
utils/: common.py  db.py  env.py  errors.py  keyboard.py
