[tool.poetry]
name = "hkn-polito-bot"
version = "1.0.0"
description = "Honors Society HKN Polito Telegram Bot"
authors = ["Your Name <you@example.com>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.6"
html2text = "^2020.1.16"
html5lib = "^1.1"
python-dateutil = "^2.8.2"
python-telegram-bot = "12.6"
python-wordpress-xmlrpc = "^2.3"
requests = "^2.27.1"
pycryptodome = "^3.14.1"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
